[package]
name = "rusty-todolist"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.10", features = ["derive"] }
regex = "1.8.4"
serde = { version = "1.0.166", features = ["derive"] }
time = { version = "0.3.22", features = ["formatting", "local-offset", "serde"] }
